force-app/main/default/objects/Lead/fields/RazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocial__c</fullName>
    <label>RazaoSocial</label>
    <length>60</length>
    <type>Text</type>
</CustomField>