force-app/main/default/objects/Lead/fields/RepresentanteMesorregiaoCidade__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteMesorregiaoCidade__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Representante__c/&quot; +  CASESAFEID(Cidade__r.Mesorregiao__r.Representante__r.Id) + &quot;/view&quot;, Cidade__r.Mesorregiao__r.Representante__r.Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representante</label>
    <type>Text</type>
</CustomField>