force-app/main/default/objects/Lead/fields/Se_nao_quer_comprar_KEKO_por_que__c.field-meta.xml
<CustomField>
    <fullName>Se_nao_quer_comprar_KEKO_por_que__c</fullName>
    <label>Se não quer comprar KEKO, por que?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>