force-app/main/default/objects/Lead/fields/Se_sim_marque_quais__c.field-meta.xml
<CustomField>
    <fullName>Se_sim_marque_quais__c</fullName>
    <label>Se sim, marque quais:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>distribuição</fullName>
            </value>
            <value>
                <fullName>atendimento à concessionárias</fullName>
            </value>
            <value>
                <fullName>e-commerce</fullName>
            </value>
            <value>
                <fullName>Auto Center (Oficina)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>