force-app/main/default/objects/Lead/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After Nacional</fullName>
            </value>
            <value>
                <fullName>After Export</fullName>
            </value>
            <value>
                <fullName>Armazém</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>P&amp;A</fullName>
            </value>
            <value>
                <fullName>Mod Center</fullName>
            </value>
            <value>
                <fullName>Montadora Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>