force-app/main/default/objects/Lead/fields/stateRegistration__c.field-meta.xml
<CustomField>
    <fullName>stateRegistration__c</fullName>
    <label>Inscrição Estadual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>