force-app/main/default/objects/Lead/fields/Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cliente__c</fullName>
    <description>Indica o status do cliente em relação a KEKO. Use este campo para classificar os clientes como &apos;Ativo&apos; ou &apos;Prospect&apos;.</description>
    <inlineHelpText>Ativo: clientes que já possuem um relacionamento estabelecido com a KEKO.
Propect: potenciais clientes que ainda não possuem vínculo formal com a empresa, mas estão em fase de prospecção.</inlineHelpText>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>