force-app/main/default/objects/Lead/fields/Valor_pretendido_do_primeiro_pedido__c.field-meta.xml
<CustomField>
    <fullName>Valor_pretendido_do_primeiro_pedido__c</fullName>
    <inlineHelpText>Escrever o valor do pedido que o cliente pretende colocar para abertura da conta</inlineHelpText>
    <label>Valor pretendido do primeiro pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>