force-app/main/default/objects/Lead/recordTypes/E_commerce_B2C.recordType-meta.xml
<RecordType>
    <fullName>E_commerce_B2C</fullName>
    <active>true</active>
    <businessProcess>E-commerce B2C</businessProcess>
    <label>E-commerce B2C</label>
</RecordType>