force-app/main/default/objects/Lead/validationRules/ComprimentoCampoNomeLead.validationRule-meta.xml
<ValidationRule>
    <fullName>ComprimentoCampoNomeLead</fullName>
    <active>true</active>
    <description>Validação para verificar se o campo Nome do Lead contém apenas 12 caracteres. Caso haja mais de 12 caracteres, haverá uma mensagem de erro.</description>
    <errorConditionFormula>LEN(Company) &gt; 12</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>O nome do lead deve ter no máximo 12 caracteres.</errorMessage>
</ValidationRule>