force-app/main/default/objects/Lead/validationRules/JustificativaNegativaObrigatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>JustificativaNegativaObrigatoria</fullName>
    <active>false</active>
    <description>Esta regra de validação verifica se o campo Justificativa Negativa Auxiliar é verdadeiro. Caso seja, o campo Justificativa Negativa se tornará um campo obrigatório para preenchimento. O não preenchimento do campo resultará em uma mensagem de erro.</description>
    <errorConditionFormula>AND(ISCHANGED(Status),
    ISPICKVAL(Status, &apos;Avaliação do Lead&apos;),RecordType.DeveloperName = &apos;Varejo&apos;, JustificativaNegativaAuxiliar__c = true, PICKLISTCOUNT(Cliente_comprar_quais_fam_de_produto__c) &lt;2)</errorConditionFormula>
    <errorDisplayField>JustificativaNegativa__c</errorDisplayField>
    <errorMessage>É preciso preencher o campo Justificativa Negativa.</errorMessage>
</ValidationRule>