force-app/main/default/objects/Lead/validationRules/Lead_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Address</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Address)</errorConditionFormula>
    <errorMessage>Preencher campo de endereço.</errorMessage>
</ValidationRule>