force-app/main/default/objects/Lead/validationRules/Lead_BackOfficeAvancoDeFase.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_BackOfficeAvancoDeFase</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Aprovação Back Office&apos;),
RecordType.DeveloperName = &apos;Varejo&apos;,
OR(
ISPICKVAL(Status, &apos;Avaliação do Lead&apos;),
ISPICKVAL(Status, &apos;Validação do Gerente&apos;),
ISPICKVAL(Status, &apos;Apresentação das Vantagens de Comprar KEKO&apos;),
ISPICKVAL(Status, &apos;Negociação&apos;),
ISPICKVAL(Status, &apos;Aprovação Financeira&apos;),
ISPICKVAL(Status, &apos;Finalizar Cadastro&apos;),
ISPICKVAL(Status, &apos;Perdido&apos;)
)
)</errorConditionFormula>
    <errorMessage>Não é possível o BackOffice voltar a estágios anteriores ou perdido.</errorMessage>
</ValidationRule>