force-app/main/default/objects/Lead/validationRules/Lead_ConversaoLead.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_ConversaoLead</fullName>
    <active>true</active>
    <description>Apenas o perfil &quot;BackOffice&quot; poderá marcar como ganho ou converter um Lead.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Ganho&quot;),
    $Profile.Name &lt;&gt; &quot;Backoffice&quot;
)</errorConditionFormula>
    <errorMessage>Apenas um perfil BackOffice pode converter um Lead.</errorMessage>
</ValidationRule>