force-app/main/default/objects/Lead/validationRules/Lead_EnderecoDeCobrancaObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_EnderecoDeCobrancaObrigatorio</fullName>
    <active>true</active>
    <description>Se o campo &quot;Endereço de cobrança igual ao de entrega&quot; for falso, será obrigatório o preenchimento dos campos de endereço de cobrança.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &apos;Finalizar Cadastro&apos;),
 RecordType.DeveloperName = &apos;Varejo&apos;,
 EnderecoCobrancaIgualEntrega__c = false,
 OR(
   ISBLANK(CobrancaBairro__c),
   ISBLANK(CobrancaRua__c),
   ISBLANK(CobrancaCEP__c),
   ISBLANK(CobrancaCidade__c),
   ISBLANK(CobrancaEstado__c),
   ISBLANK(CobrancaPais__c)
 ) 
)</errorConditionFormula>
    <errorMessage>Preencha todos os campos da seção Informação de Cobrança na aba Cadastro.</errorMessage>
</ValidationRule>