force-app/main/default/objects/Lead/validationRules/preenchimentoDetalhesMotivoPerda.validationRule-meta.xml
<ValidationRule>
    <fullName>preenchimentoDetalhesMotivoPerda</fullName>
    <active>true</active>
    <description>Esta regra de validação garante que o campo &quot;informe mais sobre o motivo da perda&quot; seja preenchido quando o usuário selecionar &quot;outros motivos&quot; como motivo da perda.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Varejo&apos;,
    ISPICKVAL(MotivoPerda__c, &apos;Outro motivo&apos;),
    ISBLANK(detalhesMotivoPerda__c)
)</errorConditionFormula>
    <errorDisplayField>detalhesMotivoPerda__c</errorDisplayField>
    <errorMessage>Forneça mais detalhes sobre o motivo da perda.</errorMessage>
</ValidationRule>