force-app/main/default/objects/Lead/validationRules/RestricaoAprovFinancCamposObrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoAprovFinancCamposObrigatorios</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Aprovação Financeira&apos;),
RecordType.DeveloperName = &apos;Varejo&apos;,
OR(
ISBLANK(Observacao_Financeiro__c)
)
)</errorConditionFormula>
    <errorMessage>Preencha o campo obrigatório.

Observação Financeiro</errorMessage>
</ValidationRule>