force-app/main/default/objects/Lead/validationRules/RestricaoAprovFinancProximaFase.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoAprovFinancProximaFase</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Aprovação Financeira&apos;),
RecordType.DeveloperName = &apos;Varejo&apos;,
OR(
ISPICKVAL(Status, &apos;Ganho&apos;),
ISPICKVAL(Status, &apos;Aprovação Back Office&apos;)
)
)</errorConditionFormula>
    <errorMessage>Não é possível avançar para esse estágio.</errorMessage>
</ValidationRule>