force-app/main/default/objects/Lead/validationRules/RestricaoNegociacaoCamposObrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoNegociacaoCamposObrigatorios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Negociação&apos;),
RecordType.DeveloperName = &apos;Varejo&apos;,
OR(
ISBLANK(Valor_pretendido_do_primeiro_pedido__c),
ISBLANK(Compra_mensal_pretendida_na_abertura_da__c),
ISPICKVAL( Condicoes_de_Pagamento__c, &quot;&quot;)
)
)</errorConditionFormula>
    <errorMessage>Preencha os campos obrigatório dessa fase.

Valor pretendido do primeiro pedido, Compra mensal pretendida na abertura e Condições de pagamento.</errorMessage>
</ValidationRule>