force-app/main/default/objects/Lead/validationRules/RestricaoPerdidoCamposObrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoPerdidoCamposObrigatorios</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &apos;Perdido&apos;),
    RecordType.DeveloperName = &apos;Varejo&apos;,
    OR(
       ISPICKVAL(MotivoPerda__c, &quot;&quot;)
    ) 
)</errorConditionFormula>
    <errorMessage>É preciso preencher o motivo da perda.</errorMessage>
</ValidationRule>