force-app/main/default/objects/Lead/validationRules/RestricaoValGerenteCamposObrigatorios.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoValGerenteCamposObrigatorios</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Validação do Gerente&apos;),
OR(
ISPICKVAL(Status, &apos;Avaliação do Lead&apos;),
ISPICKVAL(Status, &apos;Apresentação das Vantagens de Comprar KEKO&apos;),
ISPICKVAL(Status, &apos;Perdido&apos;)
),
RecordType.DeveloperName = &apos;Varejo&apos;,
ISPICKVAL(Aprovado_pelo_Gerente__c, &apos;Não&apos;),
ISBLANK(Justique__c)
)</errorConditionFormula>
    <errorMessage>Preencha os campos necessário para avançar o estágio.

Justifique</errorMessage>
</ValidationRule>