force-app/main/default/objects/Lead/validationRules/RestricaoValGerenteProximaFase.validationRule-meta.xml
<ValidationRule>
    <fullName>RestricaoValGerenteProximaFase</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status), &apos;Validação do Gerente&apos;),
RecordType.DeveloperName = &apos;Varejo&apos;,
OR(
ISPICKVAL(Status, &apos;Ganho&apos;),
ISPICKVAL(Status, &apos;Aprovação Financeira&apos;),
ISPICKVAL(Status, &apos;Finalizar Cadastro&apos;),
ISPICKVAL(Status, &apos;Negociação&apos;),
ISPICKVAL(Status, &apos;Aprovação Back Office&apos;)
)
)</errorConditionFormula>
    <errorMessage>Não é possível avançar para essa fase.</errorMessage>
</ValidationRule>