force-app/main/default/objects/Lead/validationRules/ValidacaoEnderecoCampoCodigoPostal.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoEnderecoCampoCodigoPostal</fullName>
    <active>true</active>
    <description>Garante que o campo código postal esteja preenchido antes de salvar o registro.</description>
    <errorConditionFormula>OR(ISBLANK(PostalCode),NOT(REGEX(PostalCode, &quot;^[0-9\\-\\s]+$&quot;)), LEN(SUBSTITUTE(SUBSTITUTE(PostalCode, &quot;-&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;)) &lt;&gt; 8)</errorConditionFormula>
    <errorMessage>O campo código postal de conter 8 dígitos e não pode estar vazio ou não pode conter uma letra.</errorMessage>
</ValidationRule>