force-app/main/default/objects/Lead/validationRules/ValidacaoEnderecoCampoPais.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoEnderecoCampoPais</fullName>
    <active>true</active>
    <description>Garante que o campo país esteja preenchido antes de salvar o registro.</description>
    <errorConditionFormula>ISBLANK(Country) ||
NOT(
  OR(
    UPPER(Country) = &quot;AFRICA DO SUL&quot;,
    UPPER(Country) = &quot;ALEMANHA&quot;,
    UPPER(Country) = &quot;ANGOLA&quot;,
    UPPER(Country) = &quot;ANTÍGUA E BARBUDA&quot;,
    UPPER(Country) = &quot;ARGÉLIA&quot;,
    UPPER(Country) = &quot;ARGENTINA&quot;,
    UPPER(Country) = &quot;ARUBA&quot;,
    UPPER(Country) = &quot;AUSTRÁLIA&quot;,
    UPPER(Country) = &quot;BÉLGICA&quot;,
    UPPER(Country) = &quot;BELIZE&quot;,
    UPPER(Country) = &quot;BOLÍVIA&quot;,
    UPPER(Country) = &quot;BOLIVIA&quot;,
    UPPER(Country) = &quot;BRASIL&quot;,
    UPPER(Country) = &quot;CABO VERDE&quot;,
    UPPER(Country) = &quot;CAMAROES&quot;,
    UPPER(Country) = &quot;CANADÁ&quot;,
    UPPER(Country) = &quot;CATAR&quot;,
    UPPER(Country) = &quot;CHILE&quot;,
    UPPER(Country) = &quot;CHINA&quot;,
    UPPER(Country) = &quot;CIPRE&quot;,
    UPPER(Country) = &quot;CINGAPURA&quot;,
    UPPER(Country) = &quot;COLOMBIA&quot;,
    UPPER(Country) = &quot;COSTA RICA&quot;,
    UPPER(Country) = &quot;DINAMARCA&quot;,
    UPPER(Country) = &quot;EL SALVADOR&quot;,
    UPPER(Country) = &quot;EMIRADOS ARABES&quot;,
    UPPER(Country) = &quot;EMIRADOS ARABES UNID&quot;,
    UPPER(Country) = &quot;EQUADOR&quot;,
    UPPER(Country) = &quot;ESPANHA&quot;,
    UPPER(Country) = &quot;ESTADOS UNIDOS&quot;,
    UPPER(Country) = &quot;FIJI&quot;,
    UPPER(Country) = &quot;FILIPINAS&quot;,
    UPPER(Country) = &quot;FRANÇA&quot;,
    UPPER(Country) = &quot;FRANCE GUYANE&quot;,
    UPPER(Country) = &quot;GRÃ-BRETANHA&quot;,
    UPPER(Country) = &quot;GUATEMALA&quot;,
    UPPER(Country) = &quot;HAITI&quot;,
    UPPER(Country) = &quot;HOLANDA&quot;,
    UPPER(Country) = &quot;HONDURAS&quot;,
    UPPER(Country) = &quot;ÍNDIA&quot;,
    UPPER(Country) = &quot;INGLATERRA&quot;,
    UPPER(Country) = &quot;IRÃ&quot;,
    UPPER(Country) = &quot;ITÁLIA&quot;,
    UPPER(Country) = &quot;JAMAICA&quot;,
    UPPER(Country) = &quot;JAPÃO&quot;,
    UPPER(Country) = &quot;JORDÂNIA&quot;,
    UPPER(Country) = &quot;LETÔNIA REPÚBLICA&quot;,
    UPPER(Country) = &quot;MALÁSIA&quot;,
    UPPER(Country) = &quot;MÁLI&quot;,
    UPPER(Country) = &quot;MARTINICA&quot;,
    UPPER(Country) = &quot;MAURÍCIO ILHAS&quot;,
    UPPER(Country) = &quot;MÉXICO&quot;,
    UPPER(Country) = &quot;NEW ZEALAND&quot;,
    UPPER(Country) = &quot;NICARÁGUA&quot;,
    UPPER(Country) = &quot;NORUEGA&quot;,
    UPPER(Country) = &quot;NOVA ZELÂNDIA&quot;,
    UPPER(Country) = &quot;PARAGUAI&quot;,
    UPPER(Country) = &quot;PERU&quot;,
    UPPER(Country) = &quot;PORTUGAL&quot;,
    UPPER(Country) = &quot;REINO UNIDO&quot;,
    UPPER(Country) = &quot;REPÚBLICA DO PANAMÁ&quot;,
    UPPER(Country) = &quot;REPÚBLICA DOMINICANA&quot;,
    UPPER(Country) = &quot;ROMÊNIA&quot;,
    UPPER(Country) = &quot;RÚSSIA&quot;,
    UPPER(Country) = &quot;SANTA LÚCIA&quot;,
    UPPER(Country) = &quot;SÃO VICENTE GRANADINAS&quot;,
    UPPER(Country) = &quot;SEICHELLES&quot;,
    UPPER(Country) = &quot;SUIÇA&quot;,
    UPPER(Country) = &quot;SURINAME&quot;,
    UPPER(Country) = &quot;TAILÂNDIA&quot;,
    UPPER(Country) = &quot;TRINIDAD E TOBAGO&quot;,
    UPPER(Country) = &quot;TUNÍSIA&quot;,
    UPPER(Country) = &quot;TURQUIA&quot;,
    UPPER(Country) = &quot;URUGUAI&quot;,
    UPPER(Country) = &quot;VENEZUELA&quot;,
    UPPER(Country) = &quot;ZÂMBIA&quot;
  )
)</errorConditionFormula>
    <errorMessage>O campo país não pode estar vazio e deve corresponder a um país válido.</errorMessage>
</ValidationRule>