force-app/main/default/objects/Lead/validationRules/ValidacaoNumeroTelefone.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoNumeroTelefone</fullName>
    <active>true</active>
    <description>Garante que os campos de telefones estejam preenchidos corretamente antes de salvar o registro.</description>
    <errorConditionFormula>OR(
   NOT(REGEX(Telefone_fixo__c, &quot;^[0-9\\-()\\+\\s]+$&quot;)),
   NOT(REGEX(Phone, &quot;^[0-9\\-()\\+\\s]+$&quot;))
)</errorConditionFormula>
    <errorMessage>O número de telefone deve conter apenas números válidos.</errorMessage>
</ValidationRule>