force-app/main/default/objects/Lead/listViews/Backoffice_Lead.listView-meta.xml
<ListView>
    <fullName>Backoffice_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Backoffice</label>
    <queue>Backoffice</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>