force-app/main/default/objects/Lead/listViews/Fila_VI_SUL_SP_Lead.listView-meta.xml
<ListView>
    <fullName>Fila_VI_SUL_SP_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila - VI SUL/SP</label>
    <queue>Fila_VI_SUL_SP</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>